website/websites/gp4/code/partialsums-scala.log
BUILD COMMANDS FOR: partialsums.scala

Wed Mar 21 11:46:46 PDT 2007

( if [ ! -d partialsums.scala_run ] ; then mkdir partialsums.scala_run ; fi)
cp /home/dunham/gp4/shootout/bench/partialsums/partialsums.scala partialsums.scala_run/partialsums.scala
( cd partialsums.scala_run ; /opt/scala-2.4.0/bin/scalac partialsums.scala )
partialsums.scala:19: error: scala.Console.printf(f.+("(2/3)^k\012")) does not take parameters
      Console.printf( f + "(2/3)^k\n" )(s1)
                                       ^
partialsums.scala:20: error: scala.Console.printf(f.+("k^-0.5\012")) does not take parameters
      Console.printf( f + "k^-0.5\n" )(s2)
                                      ^
partialsums.scala:21: error: scala.Console.printf(f.+("1/k(k+1)\012")) does not take parameters
      Console.printf( f + "1/k(k+1)\n" )(s3)
                                        ^
partialsums.scala:22: error: scala.Console.printf(f.+("Flint Hills\012")) does not take parameters
      Console.printf( f + "Flint Hills\n" )(s4)
                                           ^
partialsums.scala:23: error: scala.Console.printf(f.+("Cookson Hills\012")) does not take parameters
      Console.printf( f + "Cookson Hills\n" )(s5)
                                             ^
partialsums.scala:24: error: scala.Console.printf(f.+("Harmonic\012")) does not take parameters
      Console.printf( f + "Harmonic\n" )(s6)
                                        ^
partialsums.scala:25: error: scala.Console.printf(f.+("Riemann Zeta\012")) does not take parameters
      Console.printf( f + "Riemann Zeta\n" )(s7)
                                            ^
partialsums.scala:26: error: scala.Console.printf(f.+("Alternating Harmonic\012")) does not take parameters
      Console.printf( f + "Alternating Harmonic\n" )(s8)
                                                    ^
partialsums.scala:27: error: scala.Console.printf(f.+("Gregory\012")) does not take parameters
      Console.printf( f + "Gregory\n" )(s9)
                                       ^
9 errors found
make[3]: [partialsums.scala_run] Error 1 (ignored)
touch partialsums.scala_run

=================================================================
COMMAND LINE (%A is single numeric argument):

 JAVACMD="/opt/sun-jdk-1.6.0/bin/java $JDKFLAGS -server" /opt/scala-2.4.0/bin/scala -classpath partialsums.scala_run partialsums %A
************************************************************
*   TEST (partialsums.scala_run) FAILED - ERROR:  partialsums.scala_out differs from Output.25000
************************************************************
-rw-r--r-- 1 dunham users 214 Feb  5  2006 Output.25000
-rw-r--r-- 1 dunham users  26 Mar 21 11:46 partialsums.scala_out


PROGRAM OUTPUT
==============
no such file: partialsums
